[package]
name = "fsched"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30.12"
uuid = { version = "1.8.0", features = ["v4", "serde", "fast-rng"] }
